@@ -228,5 +228,13 @@ module PageObject
     def audio_elements(identifier={:index => 0})
       @platform.audios_for(identifier)
     end
+    
+    def video_element(identifier={:index => 0})
+      @platform.video_for(identifier)
+    end
+
+    def video_elements(identifier={:index => 0})
+      @platform.video_for(identifier)
+    end
   end
 end
