@@ -2,6 +2,8 @@
 * Enhancements
   * Improved handling of alert and confirm Javascript popups (George Shakhnazaryan)
   * Added hover method to Element.  Browser support is limited.
+  * Added support for the following new elements
+	Video
 
 === Version 0.7.2 / 2012-8-1
 * Enhancements
